--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,2 +1,15 @@
-<h1>dashboard works!</h1>
-<h3>Benvenuto {{ user.firstName }}</h3>
+<div class="d-flex flex-wrap gap-5 ms-5">
+  <div *ngFor="let movie of movies" class="card" style="width: 18rem">
+    <img src="{{ movie.link }}" class="card-img-top" alt="Locandina Film" />
+    <div class="card-body">
+      <h5 class="card-title">{{ movie.title }}</h5>
+      <img [src]="getFavoriteImage(movie)" alt="Cuore" width="30px" />
+      <button
+        (click)="toggleFavoriteMovie(movie.title)"
+        class="btn btn-primary ms-5"
+      >
+        Mi Piace {{ user.id }}
+      </button>
+    </div>
+  </div>
+</div>
